modified:   _config.yml 	modified:   index.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Nighthawk Pages 
-description: "Class of 2025"
-owner_name: John Mortensen
-github_username: nighthawkcoders
-github_repo: "student_2025" 
-baseurl: "/student_2025"
+description: "description"
+owner_name: Marti Jorba
+github_username: martijorbam
+github_repo: "marti_2025" 
+baseurl: "/marti_2025"
 future: true
-remote_theme: jekyll/minima
+remote_theme: pages-themes/cayman@v0.2.0
 minima:
   skin: dark
   social_links:
