--- a/_config.yml
+++ b/_config.yml
@@ -23,4 +23,6 @@ header_pages:
   - navigation/blog.md
   - navigation/search.md
   - navigation/about.md
+  - navigation/formula.md
+  - navigation/journey.md
   - README4YML.md
