--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ header_pages:
   - navigation/blog.md
   - navigation/search.md
   - navigation/about.md
+  - navigation/games.md
   - navigation/formula.md
   - navigation/journey.md
   - README4YML.md
